force-app/main/default/objects/Account/fields/Jira_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>Jira Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>