force-app/main/default/objects/Account/fields/Jira_Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jira Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>