force-app/main/default/objects/Account/fields/Jira_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project_Name__c</fullName>
    <label>Jira Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>